# segbot_apps

./: .gitignore  README.md
segbot_apps/: CHANGELOG.rst  CMakeLists.txt  package.xml
segbot_gui/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
segbot_gui/src/segbot_gui/: QuestionDialogPlugin.ui  plugins.py
segbot_gui/srv/: QuestionDialog.srv
segbot_logical_translator/: CHANGELOG.rst  CMakeLists.txt  package.xml
segbot_logical_translator/include/segbot_logical_translator/: cost_estimator.h  door_handler.h  gazebo_handler.h  segbot_logical_translator.h  structures.h
segbot_logical_translator/launch/: mark-doors-real.launch  mark_doors.launch
segbot_logical_translator/src/: gazebo_handler.cpp  mark_doors.cpp  mark_locations.cpp  test_door_detector.cpp
segbot_logical_translator/src/libsegbot_logical_translator/: .segbot_logical_translator.cpp.swp  segbot_logical_translator.cpp
segbot_logical_translator/src/nodes/: .segbot_logical_navigator.cpp.swp  segbot_logical_navigator.cpp
segbot_navigation/: CHANGELOG.rst  CMakeLists.txt  package.xml
segbot_navigation/config/eband/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
segbot_navigation/launch/: amcl.launch  move_base_eband.launch  navigation.launch
segbot_navigation/rapp/: map_nav.interface  map_nav.launch  map_nav.rapp
segbot_navigation/rviz/: nav_eband.rviz
