<package>
  <name>segbot_apps</name>
  <version>0.1.5</version>
  <description>
    High-level applications that run on Segway RMP 50 based robots at Learning
    Agents Research Group (LARG), AI Laboratory, Department of Computer
    Science, The University of Texas at Austin. 
  </description>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/segbot_apps</url>
  <url type="repository">https://github.com/utexas-bwi/segbot.git</url>
  <url type="bugtracker">https://github.com/utexas-bwi/segbot/issues</url>

  <author email="piyushk@gmail.com">Piyush Khandelwal</author>
  <maintainer email="piyushk@gmail.com">Piyush Khandelwal</maintainer>
  <maintainer email="jack.oquin@gmail.com">Jack O'Quin</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>segbot_navigation</run_depend>

  <export>
    <metapackage/>
  </export>

</package>
