<package>
  <name>segbot_logical_translator</name>
  <version>0.0.1</version>
  <description>segbot_logical_translator</description>

  <license>BSD</license>

  <!-- <url type="website">http://ros.org/wiki/segbot_logical_translator</url> -->
  <url type="repository">https://github.com/utexas-bwi/segbot_apps</url>
  <url type="bugtracker">https://github.com/utexas-bwi/segbot_apps/issues</url>

  <author email="piyushk@gmail.com">Piyush Khandelwal</author>
  <maintainer email="piyushk@gmail.com">Piyush Khandelwal</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>bwi_mapper</build_depend>
  <build_depend>bwi_planning_common</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>yaml-cpp</build_depend>

  <run_depend>bwi_mapper</run_depend>
  <run_depend>bwi_planning_common</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>opencv2</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>segbot_gazebo</run_depend>
  <run_depend>segbot_navigation</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>utexas_gdc</run_depend>
  <run_depend>yaml-cpp</run_depend>

</package>
