<package>
  <name>segbot_navigation</name>
  <version>0.1.4</version>
  <description>segbot_navigation</description>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/segbot_navigation</url>
  <url type="repository">https://github.com/utexas-bwi/segbot_apps.git</url>
  <url type="bugtracker">https://github.com/utexas-bwi/segbot_apps/issues</url>

  <author>Piyush Khandelwal</author>
  <maintainer email="piyushk@gmail.com">Piyush Khandelwal</maintainer>
  <maintainer email="jack.oquin@gmail.com">Jack O'Quin</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>amcl</run_depend>
  <run_depend>eband_local_planner</run_depend>
  <run_depend>gmapping</run_depend>
  <run_depend>map_server</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>navfn</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>segbot_bringup</run_depend>

</package>
